--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
         <p>A multipurpose all-in-one bot, enhancing your experience with user-focused commands.</p>
         <div class="buttons">
             <a href="https://discord.com/oauth2/authorize?client_id=1275907615875924068">
-                <img src="authorize_icon.png" alt="Authorize"> Authorize
+                <span class="emoji">🔗</span> Authorize
             </a>
             <a href="commands.html">
-                <img src="commands_icon.png" alt="Commands"> Commands
+                <span class="emoji">📜</span> Commands
             </a>
             <a href="https://discord.gg/dY4PQkfc2z">
-                <img src="discord_icon.png" alt="Discord"> Discord
+                <span class="emoji">💬</span> Discord
             </a>
             <a href="https://discordstatus.com/">
-                <img src="status_icon.png" alt="Status"> Status
+                <span class="emoji">📊</span> Status
             </a>
         </div>
     </div>
