--- a/index.html
+++ b/index.html
@@ -11,20 +11,19 @@
         <h1>User Quote</h1>
         <p>A multipurpose all-in-one bot, enhancing your experience with user-focused commands.</p>
         <div class="buttons">
-            <a href="https://discord.com/oauth2/authorize?client_id=1278815638600679505">
-                <span class="emoji">🔗</span> Authorize
-            </a>
-            <a href="commands.html">
-                <span class="emoji">📜</span> Commands
-            </a>
-            <a href="https://discord.gg/dY4PQkfc2z">
-                <span class="emoji">💬</span> Discord
-            </a>
-            <a href="https://discordstatus.com/">
-                <span class="emoji">📊</span> Status
-            </a>
+            <button onclick="window.location.href='https://discord.com/oauth2/authorize?client_id=1278815638600679505'">
+                🔗 Authorize
+            </button>
+            <button onclick="window.location.href='commands.html'">
+                📜 Commands
+            </button>
+            <button onclick="window.location.href='https://discord.gg/dY4PQkfc2z'">
+                💬 Discord
+            </button>
+            <button onclick="window.location.href='https://discordstatus.com/'">
+                📊 Status
+            </button>
         </div>
     </div>
 </body>
 </html>
-
