--- a/commands.html
+++ b/commands.html
@@ -3,17 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Quote - Commands</title>
+    <title>Commands</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="commands-container">
-        <h1>User Quote - Commands</h1>
-        <ul>
-            <li>/random_quote</li>
-            <li>/quote</li>
-            <li>/quote_message</li>
-        </ul>
+    <div class="container">
+        <h1>Commands</h1>
+        <div class="command-box">
+            <h2>/random_quote</h2>
+            <p>Generates a random quote for inspiration or fun.</p>
+        </div>
+        <div class="command-box">
+            <h2>/quote</h2>
+            <p>Allows you to quote a user message with their username and profile picture.</p>
+        </div>
+        <div class="command-box">
+            <h2>/quote_message</h2>
+            <p>Create an image with a quoted message, including a fade effect and user info.</p>
+        </div>
     </div>
 </body>
 </html>
