--- a/index.html
+++ b/index.html
@@ -4,26 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Quote</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <h1>User Quote</h1>
         <p>A multipurpose all-in-one bot, enhancing your experience with user-focused commands.</p>
         <div class="buttons">
-            <button onclick="window.location.href='https://discord.com/oauth2/authorize?client_id=1278815638600679505'">
-                🔗 Authorize
-            </button>
-            <button onclick="window.location.href='commands.html'">
-                📜 Commands
-            </button>
-            <button onclick="window.location.href='https://discord.gg/dY4PQkfc2z'">
-                💬 Discord
-            </button>
-            <button onclick="window.location.href='https://discordstatus.com/'">
-                📊 Status
-            </button>
+            <a href="https://discord.com/oauth2/authorize?client_id=1278815638600679505" class="button">💻 Authorize</a>
+            <a href="commands.html" class="button">📜 Commands</a>
+            <a href="https://discord.gg/dY4PQkfc2z" class="button">🎮 Discord</a>
+            <a href="https://discordstatus.com/" class="button">📊 Status</a>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
