--- a/commands.html
+++ b/commands.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Commands</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
+        <a href="index.html" class="back-button">🔙 Back to Home</a>
         <h1>Commands</h1>
-        <div class="command-box">
-            <h2>/random_quote</h2>
-            <p>Generates a random quote for inspiration or fun.</p>
+
+        <div class="command-section">
+            <h2>Text Commands</h2>
+            <div class="command-box">/random_quote</div>
+            <div class="command-box">/quote</div>
         </div>
-        <div class="command-box">
-            <h2>/quote</h2>
-            <p>Allows you to quote a user message with their username and profile picture.</p>
-        </div>
-        <div class="command-box">
-            <h2>/quote_message</h2>
-            <p>Create an image with a quoted message, including a fade effect and user info.</p>
+
+        <div class="command-section">
+            <h2>Context Menu</h2>
+            <div class="command-box">quote message</div>
         </div>
     </div>
 </body>
